removed dark mode and fixed centering for login on mobile

--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -215,6 +215,14 @@ body {
     .login-footer {
         padding: 2rem 2rem;
     }
+
+    .login-button {
+        margin: 5px auto;
+    }
+
+    .login-content-input {
+        margin: 0 auto;
+    }
 }
 
 @media screen and (max-width: 450px) {
